Added fake news to homepage, fixed image route

--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
 		       		<b>Disaster Tweet Identification</b>
 		       	</button>
 	       </a>
-	       <a href="#" style="text-decoration: none;">
+	       <a href="/fake_news" style="text-decoration: none;">
 	       		<button class="button is-primary" style="font-size: 19px">
 	       			<b>Fake News Identifier</b>
 	       		</button>
